# ckad-dojo

./: .editorconfig  .envrc  .flake8  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ckad_dojo.py  pyproject.toml  scorring.md  simulation1.md
.claude/: settings.local.json
.claude/commands/: commit.md  coverage.md  create-simulation.md  opensource-ready.md  quality.md  update-constitution.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
exams/ckad-simulation1/: exam.conf  questions.md  scoring-functions.sh  solutions.md
exams/ckad-simulation2/: exam.conf  questions.md  scoring-functions.sh  solutions.md
exams/ckad-simulation3/: exam.conf  questions.md  scoring-functions.sh  solutions.md
exams/ckad-simulation4/: exam.conf  questions.md  scoring-functions.sh  solutions.md
exams/ckad-simulation5/: exam.conf  questions.md  scoring-functions.sh  solutions.md
manifests/setup/: q08-deployment.yaml  q14-secret-handler.yaml  q18-manager-api.yaml  (+1 more)
scripts/: bump-version.py  ckad-cleanup.sh  ckad-exam.sh  ckad-score.sh  ckad-setup.sh
templates/: q-p1-project-23-api.yaml  q09-holy-api-pod.yaml  q14-secret-handler.yaml
tests/: run-tests.sh  test-banner.sh  test-common.sh  test-framework.sh  test-scoring.sh  test-setup-functions.sh  test-timer.sh
web/: index.html  server.py
(+174 files in other folders)
