[project]
name = "ckad-dojo"
version = "1.0.0"
description = "CKAD Exam Simulator - Practice for Kubernetes certification"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ckad-dojo contributors" }]
keywords = ["kubernetes", "ckad", "exam", "simulator", "certification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = []

[project.scripts]
ckad-server = "web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web"]

[dependency-groups]
dev = []
